syntax = "proto3";

package gateway.organizations.domain;

option java_outer_classname = "OrganizationDomain";

message OrganizationEstablished {
    string org_id = 1;
    OrgType type = 2;
}

message OrganizationInfo {
    optional string name = 1;
    optional string short_name = 2;
    optional string address = 3;
    repeated string child_orgs = 4;
    optional bool is_private = 6;
}

// for temporary purposes - want to show logic being handled & returned correctly
enum OrgType {
    ORG_TYPE_BASE = 0;
    ORG_TYPE_SUB = 1;
}